2017/05/15 v144
    1. Fix the unexpected unitframe hidden for raid panels.

2017/05/06 v143
    1. Fix possible error for smooth value system.

2017/05/06 v142
    1. Fix the smoothing performance for healthbar and powerbar.

2017/05/02 v141
    1. Force action button full refresh when unit aura changes.

2017/04/29 v140
    1. Fix the change of the smooth delay of healthbar and powerbar.

2017/03/30 v139
    1. Fix for 7.2.0.

2017/03/09 v138
    1. A little fix for health and power updating.

2016/12/27 v136
    1. Fix mount spell.

2016/12/20 v135
    1. Update for PLoop v168.

2016/12/14 v134
    1. Fix error for System.Task.

2016/12/09 v133
    1. Update for PLoop v164.

2016/12/08 v132
    1. Fix the player can't use mount spell when shapeshift.

2016/11/30 v131
    1. The IFActionHandler support buttons that control their alpha by themselves.

2016/11/29 v130
    1. Force refresh when flyout spell is updated.

2016/11/26 v129
    1. Fix the keep fade out option for action buttons.

2016/11/26 v128
    1. Fix the random mount spell's button state.

2016/11/26 v127
    1. Update for New PLoop System.
    2. Fix several bugs.

2016/11/20 v125
    1. Fix the double click won't select words in the Multiline-textbox and Code Editor, blz may changed the base.

2016/10/30 v124
    1. Add support to show upgrade item for bag slot action buttons.(not work until blz fix it)

2016/10/27 v123
    1. Update for WOW 7.1

2016/10/15: IGAS v120
    1. Fix for PLoop v155 version.

2016/10/01: IGAS v119
    1. Fix ActiveThread error for System.Array.
    2. Improve the dropdownlist so sub-menus won't be blocked by parent's

2016/09/30: IGAS v118
    1. Fix the aurapanel's refreshing.

2016/09/14: IGAS v117
    1. The PLoop is removed, it's a standalone addon now.

2016/09/13: IGAS v116
    1. Use RegisterAutoHide to fix the hover spell bindings not clear for IFSpellHandler.

2016/09/04: IGAS v115
    1. Fix action buttons for spells not in the spell books.
