@@ -1,3 +1,6 @@
+2017/08/14 v145
+    1. Re-design the grid updating logic in action bar system for better inheritance.
+
 2017/05/15 v144
     1. Fix the unexpected unitframe hidden for raid panels.
 
